[package]
name = "uptime_robot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_repr = "0.1.10"
serde_with = "2.1.0"
thiserror = "1.0.38"

[dependencies.serde]
version = "1.0.147"
features = ["derive"]


[dependencies.reqwest]
version = "0.11.12"
features = ["rustls-tls", "json"]

[dependencies.strum]
version = "0.24.1"
features = ["derive"]
